--- a/FrontEnd/src/components/Header/styles.css
+++ b/FrontEnd/src/components/Header/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap'); */
 
 
 .header {
@@ -18,6 +18,14 @@
     margin-left: 20px;
     color: #ffffff;
     border-radius: 0;
+}
+
+.primary {
+    background-color: #1F88FE;
+}
+
+.secondary {
+    background-color: #53C48A;
 }
 
 .toolbar {
