--- a/FrontEnd/src/components/LeftPane/styles.css
+++ b/FrontEnd/src/components/LeftPane/styles.css
@@ -17,7 +17,8 @@
     border: "1px solid black";
     height: 100%;
     margin: 10px;
-    margin-top: 80px;
+    margin-top: 70px;
+    margin-left: 20px;
     /* padding: 10px; */
 }
 
@@ -28,7 +29,7 @@
 }
 
 .mainHeadingText {
-    font-family: Roboto Open Sans, sans-seri;
+    font-family: "Roboto Open Sans, sans-seri";
     font-weight: 500;
     font-size: 24px;
     margin-left: 10px;
