--- a/FrontEnd/src/components/Header/styles.css
+++ b/FrontEnd/src/components/Header/styles.css
@@ -1,6 +1,5 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap'); */
 
-
 .header {
     background-color: #ffffff;
     padding-right: 20px;
@@ -21,11 +20,11 @@
 }
 
 .primary {
-    background-color: #1F88FE;
+    background-color: #1f88fe;
 }
 
 .secondary {
-    background-color: #53C48A;
+    background-color: #53c48a;
 }
 
 .toolbar {
@@ -36,7 +35,6 @@
 .drawerContainer {
     padding: "20px 30px";
 }
-
 
 @media (max-width: 900px) {
     .header {
